--- a/Tedometer/MainView.xib
+++ b/Tedometer/MainView.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">768</int>
-		<string key="IBDocument.SystemVersion">10A432</string>
+		<string key="IBDocument.SystemVersion">10B504</string>
 		<string key="IBDocument.InterfaceBuilderVersion">740</string>
-		<string key="IBDocument.AppKitVersion">1038</string>
+		<string key="IBDocument.AppKitVersion">1038.2</string>
 		<string key="IBDocument.HIToolboxVersion">437.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="34"/>
+			<integer value="126"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -77,14 +77,46 @@
 								</object>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 							</object>
-							<object class="IBUILabel" id="223268888">
+							<object class="IBUILabel" id="346415883">
 								<reference key="NSNextResponder" ref="614999557"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{21, 178}, {215, 43}}</string>
+								<string key="NSFrame">{{21, 159}, {215, 43}}</string>
 								<reference key="NSSuperview" ref="614999557"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4yOTgwMzkyMjc3IDAuMjk4MDM5MjI3NyAwLjI5ODAzOTIyNzcgMAA</bytes>
+									<bytes key="NSRGB">MC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMAA</bytes>
+								</object>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="IBUIText">TITLE</string>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">14</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC44AA</bytes>
+								</object>
+								<object class="NSColor" key="IBUIHighlightedColor" id="578579187">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+								</object>
+								<reference key="IBUIShadowColor" ref="557351553"/>
+								<string key="IBUIShadowOffset">{0, 0}</string>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+							</object>
+							<object class="IBUILabel" id="223268888">
+								<reference key="NSNextResponder" ref="614999557"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{21, 181}, {215, 43}}</string>
+								<reference key="NSSuperview" ref="614999557"/>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMAA</bytes>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -92,17 +124,14 @@
 								<string key="IBUIText">Ted-O-Meter</string>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">26</double>
+									<double key="NSSize">24</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMAA</bytes>
+									<bytes key="NSRGB">MC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC4yMDAwMDAwMDMgMC44AA</bytes>
 								</object>
-								<object class="NSColor" key="IBUIHighlightedColor" id="578579187">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
-								</object>
+								<reference key="IBUIHighlightedColor" ref="578579187"/>
 								<reference key="IBUIShadowColor" ref="557351553"/>
 								<string key="IBUIShadowOffset">{0, 0}</string>
 								<int key="IBUIBaselineAdjustment">1</int>
@@ -126,6 +155,33 @@
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">meter_glare.png</string>
+								</object>
+							</object>
+							<object class="IBUIButton" id="216037687">
+								<reference key="NSNextResponder" ref="614999557"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{59, 181}, {138, 70}}</string>
+								<reference key="NSSuperview" ref="614999557"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">15</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUIHighlightedTitleColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MyAwLjMwOTgwMzkzIDAuNTIxNTY4NjYAA</bytes>
+								</object>
+								<object class="NSColor" key="IBUINormalTitleShadowColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
 							</object>
 						</object>
@@ -160,9 +216,9 @@
 							<double key="NSSize">17</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<object class="NSColor" key="IBUITextColor" id="781666012">
+						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">2</int>
-							<bytes key="NSRGB">MC45ODAzOTIyMTc2IDAuMjQ3MDU4ODM4NiAwLjI0NzA1ODgzODYAA</bytes>
+							<bytes key="NSRGB">MSAwLjI0ODAwMDAwMDIgMC4yNDgwMDAwMDAyAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
@@ -241,13 +297,19 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{212, 286}, {88, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
-						<reference key="IBUIBackgroundColor" ref="382834971"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MSAwLjI0ODAwMDAwMDIgMC4yNDgwMDAwMDAyIDAAA</bytes>
+						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">0</string>
 						<reference key="IBUIFont" ref="637251703"/>
-						<reference key="IBUITextColor" ref="781666012"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MSAwLjI0ODAwMDAwMDIgMC4yNDgwMDAwMDAyAA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
@@ -336,7 +398,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
-						<object class="NSColor" key="IBUIBackgroundColor">
+						<object class="NSColor" key="IBUIBackgroundColor" id="762193069">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
 						</object>
@@ -354,18 +416,18 @@
 								<reference key="IBUIToolbar" ref="987535781"/>
 								<int key="IBUISystemItemIdentifier">5</int>
 							</object>
-							<object class="IBUIBarButtonItem" id="560430349">
-								<string key="IBUITitle">$</string>
-								<float key="IBUIWidth">40</float>
-								<reference key="IBUIToolbar" ref="987535781"/>
-							</object>
 							<object class="IBUIBarButtonItem" id="698443878">
 								<string key="IBUITitle">kW</string>
 								<float key="IBUIWidth">40</float>
 								<reference key="IBUIToolbar" ref="987535781"/>
 							</object>
+							<object class="IBUIBarButtonItem" id="560430349">
+								<string key="IBUITitle">$</string>
+								<float key="IBUIWidth">40</float>
+								<reference key="IBUIToolbar" ref="987535781"/>
+							</object>
 							<object class="IBUIBarButtonItem" id="690789168">
-								<string key="IBUITitle">CO2</string>
+								<string key="IBUITitle">lbs</string>
 								<float key="IBUIWidth">45</float>
 								<reference key="IBUIToolbar" ref="987535781"/>
 							</object>
@@ -378,10 +440,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MAA</bytes>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="762193069"/>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
 					<int key="IBUIStatusBarStyle">2</int>
@@ -503,6 +562,23 @@
 					</object>
 					<int key="connectionID">144</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">meterTitle</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="346415883"/>
+					</object>
+					<int key="connectionID">147</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">nextMeter</string>
+						<reference key="source" ref="216037687"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">149</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -538,10 +614,10 @@
 							<reference ref="1012066828"/>
 							<reference ref="517476041"/>
 							<reference ref="614999557"/>
-							<reference ref="987535781"/>
 							<reference ref="541409388"/>
 							<reference ref="483802551"/>
 							<reference ref="893225097"/>
+							<reference ref="987535781"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -554,8 +630,11 @@
 							<reference ref="223268888"/>
 							<reference ref="987706867"/>
 							<reference ref="894875800"/>
+							<reference ref="346415883"/>
+							<reference ref="216037687"/>
 						</object>
 						<reference key="parent" ref="883825266"/>
+						<string key="objectName">Meter View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">63</int>
@@ -647,9 +726,9 @@
 							<reference ref="630244190"/>
 							<reference ref="134363610"/>
 							<reference ref="560430349"/>
-							<reference ref="698443878"/>
 							<reference ref="690789168"/>
 							<reference ref="848067404"/>
+							<reference ref="698443878"/>
 						</object>
 						<reference key="parent" ref="883825266"/>
 					</object>
@@ -683,6 +762,18 @@
 						<reference key="object" ref="848067404"/>
 						<reference key="parent" ref="987535781"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">146</int>
+						<reference key="object" ref="346415883"/>
+						<reference key="parent" ref="614999557"/>
+						<string key="objectName">Meter Title</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">148</int>
+						<reference key="object" ref="216037687"/>
+						<reference key="parent" ref="614999557"/>
+						<string key="objectName">Next Meter Button</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -711,6 +802,8 @@
 					<string>139.IBPluginDependency</string>
 					<string>141.IBPluginDependency</string>
 					<string>145.IBPluginDependency</string>
+					<string>146.IBPluginDependency</string>
+					<string>148.IBPluginDependency</string>
 					<string>34.CustomClassName</string>
 					<string>34.IBEditorWindowLastContentRect</string>
 					<string>34.IBPluginDependency</string>
@@ -743,8 +836,10 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>MainView</string>
-					<string>{{592, 521}, {320, 480}}</string>
+					<string>{{899, 685}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -768,7 +863,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">145</int>
+			<int key="maxID">149</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -791,11 +886,13 @@
 							<string>activateCarbonMeter</string>
 							<string>activateCostMeter</string>
 							<string>activatePowerMeter</string>
+							<string>nextMeter</string>
 							<string>refreshData</string>
 							<string>showInfo</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -810,6 +907,7 @@
 							<string>activityIndicator</string>
 							<string>hourValue</string>
 							<string>meterLabel</string>
+							<string>meterTitle</string>
 							<string>meterView</string>
 							<string>monthValue</string>
 							<string>nowValue</string>
@@ -820,6 +918,7 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIActivityIndicatorView</string>
+							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>MeterView</string>
@@ -987,6 +1086,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIBarItem.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIButton</string>
+					<string key="superclassName">UIControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIControl</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIControl.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
